--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ src="https://www.facebook.com/tr?id=656794533664835&ev=PageView&noscript=1"
 				<div class="elementor-widget-container">
 							<ul class="elementor-icon-list-items">
 							<li class="elementor-icon-list-item">
-										<span class="elementor-icon-list-text"><b><u>Liberação dia 19/03/2025</u></b></span>
+										<span class="elementor-icon-list-text"><b><u>Liberação Instantânea</u></b></span>
 									</li>
 								<li class="elementor-icon-list-item">
 										<span class="elementor-icon-list-text">Conteúdo 100% Atualizado</span>
